fixed white spacing before footer

--- a/art128/hawaiianmonkseal-v4/css/style.css
+++ b/art128/hawaiianmonkseal-v4/css/style.css
@@ -102,6 +102,24 @@ h5 {
   font-family: "DM Serif Display", serif;
   font-weight: 400;
   font-style: normal;
+  text-shadow: 0em 0em 0.2em rgb(0 0 0 /0.3);
+    animation-name: animation-h1;
+    animation-duration: 2s;
+}
+
+@keyframes animation-h1 {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+  0% {
+    transform: translateY(-0.5em);
+  }
 }
 
 /* PARAGRAPHS */
@@ -165,21 +183,6 @@ article p + h4,
 article p + h5,
 article p + h6 {
   margin-top: 1.5em;
-}
-
-/* article p:first-of-type {
-  font-size: 1.4em;
-  line-height: 1.3em;
-} */
-
-article p:first-of-type:first-letter {
-  font-size: 3em;
-  line-height: 1em;
-  background: #000;
-  color: #fff;
-  padding: 0.2em 0.4em;
-  margin-right: 0.3em;
-  float: left;
 }
 
 /* HELPER CLASSES */
@@ -311,6 +314,12 @@ footer {
   display: block;
   padding: 3em;
   background-color: rgba(0, 13, 37, 1);
+  position: relative;
+}
+
+address {
+  float: right;
+  text-align: left;
 }
 
 @media (min-width: 767px) {
@@ -763,7 +772,7 @@ form input[type="submit"] {
   min-height: 400px;
   position: relative;
   aspect-ratio: 6 / 4;
-  border: 5px solid red;
+  /* border: 5px solid red; */
 } 
 
 .bg-clouds-left {
@@ -771,7 +780,7 @@ form input[type="submit"] {
   top: -100px;
   left: 0;
   z-index: -1;
-  width: 75%;
+  width: 80%;
   background-size: 100%;
   /* background-color: pink; */
   border: 1px solid red;
@@ -836,7 +845,7 @@ form input[type="submit"] {
 
 .bg-rock {
   position:absolute;
-  bottom: -40%;
+  bottom: -38%;
   /* left: 0; */
   z-index: -1;
   width: 100%;
@@ -844,18 +853,31 @@ form input[type="submit"] {
   /* background-color: yellow; */
   /* border: 1px solid purple; */
   aspect-ratio: 9 / 6;
-  background-image: url(../img/mountainsrock.png);
+  background-image: url(../img/mountainsrocknew.png);
   background-repeat: no-repeat;
 }
 
 .bg-mountains-to-ocean {
   padding-top: 30%;
   /* background-color: rgba(5, 5, 86, 0.5); */
-  border: 1px solid orange;
+  /* border: 1px solid orange; */
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url(../img/oceanbackgroundnew.png);
+  
 }
+
+.bg-mountains-to-ocean::after {
+  content: "";
+  position: absolute;
+  bottom: -200px;
+  left: 0;
+  background: linear-gradient(#141d31, rgb(0, 13, 37));;
+  width: 100%;
+  height: 200px;
+  z-index: -1;
+}
+
 
 @media (max-width: 767px) {
   .bg-mountains-to-ocean {
@@ -873,10 +895,17 @@ form input[type="submit"] {
   border-radius: 10px;
 }
 
-.card-title,
-.card-text {
+.card-title {
   color: white;
   text-align: center;
+}
+
+.card-text {
+  color: rgba(255, 255, 255, 0.8);
+}
+.card-text:hover
+{
+  color: rgba(255, 255, 255, 1);
 }
 
 .card-text i {
@@ -902,3 +931,25 @@ form input[type="submit"] {
   transform: translate(-50%, -50%);
   padding-bottom: 0;
 }
+
+/* CARD ANIMATION */
+
+.card {
+  display: grid;
+  border-radius: 1rem;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.card > * {
+  grid-area: 1/1;
+  transition: 0.4s;
+}
+
+.card:hover .card-title {
+  --_i: 0%;
+}
+.card:hover img {
+  transform: scale(1.2);
+}
+
